2006-12-25  Akim Demaille  <akim.demaille@free.fr>

	Rule permutation
	* src/parser/bison/ugrammar.y: Highlight the similarity bw rules
	using flags.

2006-12-25  Akim Demaille  <akim.demaille@free.fr>

	Simplifications
	* src/uexpression.hh (UExpression::Type): Remove the EXPR_ prefix.
	Adjust all uses.
	(UExpression::UExpression): Remove the ctor that takes an ufloat*,
	since any it takes a copy.
	Use assert instead of claiming some belief in comments.

	* src/parser/bison/ugrammar.y (take): New.
	Use it to free leaking ufloats.
	There are many more, but the rest of the code must first take
	ufloats by value, not pointer.
	(flags.0.1): New.
	(flags): Use it.
	* src/uatcandidate.cc (trigger): Simplify the control flow logic.

2006-12-24  Akim Demaille  <akim.demaille@free.fr>

	Reduce code bloat in the parser
	The assembly flags are no longer needed on MIPS to compile
	the parser.  Maybe we can also leave -O2.
	* src/parser/bison/ugrammar.y (NEW_EXP, NEW_BIN, MEMCHECK): Remove
	all these macros, replaced by...
	(new_exp, new_bin, memcheck): these.
	(uparser): Rename as...
	(up): this.
	(TOK_UECHO): Rename as...
	(TOK_ECHO): this.
	Use string instead of token names when possible.
	* src/parser/bison/utoken.l: Adjust.
	* src/parser/uparser.hh, src/parser/uparser.cc (UFlexer):
	Remove, useless.

2006-12-24  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Revert former change.
	* src/uexpression.cc: const_cast strstr's return value. It is needed
	  on Windows/VC++ where strstr is overloaded: when one of its
	  arguments is const, both are const and the return value is also
	  const.

2006-12-24  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	UASyncCommand is an UCommand.
	In my quest to remove evil old-style C casts from the code, I noticed
	that sometimes, an UASyncCommand* gets casted in an UCommand*. This is
	plain wrong since UASyncCommand doesn't inherit UCommand. Worse: the
	resulting UCommand* could be used to call getTag method and this