@@ -1,5 +1,13 @@
 2006-12-25  Akim Demaille  <akim.demaille@free.fr>
 
+	Factor the handling of flags
+	I'd really appreciate if someone could add tests on the use
+	of flags...
+	* src/parser/bison/ugrammar.y (flags, flags.0.1): Remove.
+	(flag, flags.0, flags.1): New.
+
+2006-12-25  Akim Demaille  <akim.demaille@free.fr>
+
 	Rule permutation
 	* src/parser/bison/ugrammar.y: Highlight the similarity bw rules
 	using flags.
